crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_array_operations.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"WITH test_array AS (\n        SELECT column1 AS text_val, column2 AS case_val FROM VALUES\n        ('Hello', 1),\n        ('World', 0),\n        ('Test', 1),\n        ('', 0),\n        (NULL, 1)\n    )\n    SELECT\n        text_val,\n        case_val,\n        HEX_ENCODE(text_val, case_val) AS hex_encoded\n    FROM test_array\""
---
Ok(
    [
        "+----------+----------+-------------+",
        "| text_val | case_val | hex_encoded |",
        "+----------+----------+-------------+",
        "| Hello    | 1        | 48656C6C6F  |",
        "| World    | 0        | 576f726c64  |",
        "| Test     | 1        | 54657374    |",
        "|          | 0        |             |",
        "|          | 1        |             |",
        "+----------+----------+-------------+",
    ],
)
