crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_basic_string.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('SNOW') AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "| 534E4F57  |",
        "+-----------+",
    ],
)
