crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_binary_literal.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE(X'DEADBEEF') AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "| DEADBEEF  |",
        "+-----------+",
    ],
)
