crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_binary_literal_lowercase.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE(X'DEADBEEF', 0) AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "| deadbeef  |",
        "+-----------+",
    ],
)
