crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_case_comparison.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('ABC', 1) AS uppercase,\n        HEX_ENCODE('ABC', 0) AS lowercase,\n        HEX_ENCODE('abc', 1) AS input_lower_output_upper,\n        HEX_ENCODE('abc', 0) AS input_lower_output_lower\""
---
Ok(
    [
        "+-----------+-----------+--------------------------+--------------------------+",
        "| uppercase | lowercase | input_lower_output_upper | input_lower_output_lower |",
        "+-----------+-----------+--------------------------+--------------------------+",
        "| 414243    | 414243    | 616263                   | 616263                   |",
        "+-----------+-----------+--------------------------+--------------------------+",
    ],
)
