crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_case_consistency.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('AbCdEf', 1) AS mixed_input_upper_case,\n        HEX_ENCODE('AbCdEf', 0) AS mixed_input_lower_case,\n        UPPER(HEX_ENCODE('AbCdEf', 0)) = HEX_ENCODE('AbCdEf', 1) AS case_conversion_works\""
---
Ok(
    [
        "+------------------------+------------------------+-----------------------+",
        "| mixed_input_upper_case | mixed_input_lower_case | case_conversion_works |",
        "+------------------------+------------------------+-----------------------+",
        "| 416243644566           | 416243644566           | true                  |",
        "+------------------------+------------------------+-----------------------+",
    ],
)
