crates/functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_different_int_types.snap
---
source: crates/functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('test', CAST(0 AS SMALLINT)) AS with_smallint,\n        HEX_ENCODE('test', CAST(1 AS INTEGER)) AS with_integer,\n        HEX_ENCODE('test', CAST(0 AS BIGINT)) AS with_bigint\""
---
Ok(
    [
        "+---------------+--------------+-------------+",
        "| with_smallint | with_integer | with_bigint |",
        "+---------------+--------------+-------------+",
        "| 74657374      | 74657374     | 74657374    |",
        "+---------------+--------------+-------------+",
    ],
)
